[tool.poetry]
name = "topic_cluster"
version = "2.0.0"
description = "Cluster papers into topics according to their titles and abstracts."
authors = ["miile7"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
easygui = "^0.98.3"
easysettings = "^4.0.1"
matplotlib = "^3.6.2"
numpy = "^1.23.4"
bibtexparser = "^1.4.0"
scikit-learn = "^1.1.3"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
